# orogen

./: CMakeLists.txt
lib/orogen/templates/: main.cpp
lib/orogen/templates/config/: Base.cmake  Deployment.cmake  TaskLib.cmake
lib/orogen/templates/tasks/: DeployerComponent.cpp
lib/orogen/templates/typekit/: CMakeLists.txt  TypesFwd.hpp
lib/orogen/templates/typekit/corba/: Convertions.cpp  Convertions.hpp
