cmake_minimum_required(VERSION 2.6)

project(orogen)
FIND_PACKAGE(Ruby REQUIRED)

install(DIRECTORY bin/ DESTINATION bin 
  PATTERN "bin/*"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
  GROUP_EXECUTE GROUP_READ)

install(FILES src/deployer.hpp DESTINATION include/${PROJECT_NAME})

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/orogen.pc.in ${CMAKE_CURRENT_BINARY_DIR}/orogen.pc @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/orogen.pc DESTINATION lib/pkgconfig)

STRING(REGEX REPLACE ".*lib(32|64)?/?" "lib/" RUBY_EXTENSIONS_INSTALL_DIR ${RUBY_ARCH_DIR})
install(DIRECTORY lib/ DESTINATION ${RUBY_EXTENSIONS_INSTALL_DIR})
